media/readarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
      - name: readarr
        image: lscr.io/linuxserver/readarr:nightly
        ports:
        - containerPort: 8787
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - mountPath: /data
          name: data
      volumes:
      - name: config
        persistentVolumeClaim: 
          claimName: readarr-config
      - name: data
        persistentVolumeClaim: 
          claimName: media-data
